examples/kubernetes/aws/oxauth/dynamic-ebs/oxauth-np.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: oxauth-np
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: oxauth
  ingress:
  - from:
    - ipBlock:
        cidr: 198.19.0.0/16
    ports:
    - protocol: TCP
      port: 8080
  - from:
    - podSelector:
        matchLabels:
          app: oxtrust
    ports:
    - protocol: TCP
      port: 8080
  - from:
    - podSelector:
        matchLabels:
          app: key-rotation
    ports:
    - protocol: TCP
      port: 8080
  - from:
    - podSelector:
        matchLabels:
          app: oxpassport
    ports:
    - protocol: TCP
      port: 8080
  - from:
    - podSelector:
        matchLabels:
          app: oxshibboleth
    ports:
    - protocol: TCP
      port: 8080
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 443
  - to:
    - podSelector:
        matchLabels:
          app: opendj
    ports:
    - protocol: TCP
      port: 1636
  - to:
    - ipBlock:
        cidr: 198.19.0.0/16
    ports:
    - protocol: TCP
      port: 6379
